--- a/usermanagement/src/main/resources/settings.properties
+++ b/usermanagement/src/main/resources/settings.properties
@@ -2,4 +2,6 @@ connection.driver = org.hsqldb.jdbcDriver
 connection.url = jdbc:hsqldb:file:db/USERMANAGEMENT
 connection.user=SA
 connection.password=
+
+dao.factory = kn.severina.usermanagement.db.DaoFactoryImpl
 dao.kn.severina.usermanagement.db.UserDao = kn.severina.usermanagement.db.HsqldbUserDao
